fdo#74363: fix auto correct of initial capitals on start of first para

The GetPrevPara() method apparently has to return 0 when there is no
previous paragraph.

(regression from ac85b6cff11d193f5f71d11b1f3cc1c474653f59)

Change-Id: I09a3e1d3a3adb33562e4e03c0755447047cbd433